<resources>
    <string name="app_name">海贷1期</string>
    <string name="app_sub_name">海贷</string>
    <string name="tab_home">首页</string>
    <string name="tab_loans">贷款</string>
    <string name="tab_mine">我的</string>

    <string name="title_login">登录</string>
    <string name="phone_num">手机号</string>
    <string name="pw_txt">密  码</string>
    <string name="new_pw">新密码</string>
    <string name="sure_pw">确认密码</string>
    <string name="input_phone_tip">请输入手机号</string>
    <string name="input_new_pw">请输入新密码</string>
    <string name="input_pw">请输入密码</string>
    <string name="sure_new_pw">请确认新密码</string>
    <string name="code_num">验证码</string>
    <string name="input_code_tip">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="code_time">重新获取(%s秒)</string>
    <string name="change_pw">修改密码</string>
    <string name="loan_detail">贷款明细</string>
    <string name="loan_info">贷款信息</string>
    <string name="trial_detail">试算明细</string>
    <string name="agree">我已同意用户协议及声明</string>

    <string name="my_setting">设置</string>
    <string name="loading_error">网络连接失败，请稍后重试</string>
    <string name="loading_no_record">还没有相关记录</string>
    <string name="loan_no_data">暂无借款产品，敬请期待</string>
    <string name="no_repayment_record">暂无还款记录</string>
    <string name="current_no_loan">暂无借款，赶快去看看吧</string>
    <string name="current_no_loan_confirm">暂无待确认贷款</string>

    <string name="lending_account_info">放款账户信息</string>
    <string name="bank_account">银行账号</string>
    <string name="bank_account_select">选择银行</string>
    <string name="account_name">账户名</string>
    <string name="open_bank_name">开户支行</string>
    <string name="add_account">添加账号</string>
    <string name="change_account">更换账号</string>

    <string name="double_click_exit">再按一次回退键退出应用</string>

    <!--btn-->
    <string name="btn_submit">提交</string>
    <string name="btn_to_submit">去提交</string>
    <string name="btn_add">添加</string>
    <string name="btn_up">上传</string>
    <string name="click_retry">点击重试</string>

    <!--title-->
    <string name="title_add_bank">添加银行卡</string>
    <string name="title_bank_list">银行卡列表</string>
    <string name="title_person_info">个人基本信息</string>
    <string name="title_enterprise_data">企业资料</string>
    <string name="title_family_property">家庭财产信息</string>
    <string name="title_bank_flow">银行流水</string>
    <string name="title_agreement_detail">银行流水</string>
    <string name="title_loan_detail">贷款明细</string>
    <string name="title_loan_info">贷款信息</string>
    <string name="title_repayment_record">还款记录</string>
    <string name="title_pic_pre">图片预览</string>
    <string name="title_contract_detail">协议详情</string>

    <!--sub title-->
    <string name="require_data">需要的资料</string>
    
    <!--data-->
    <string name="data_person">个人资料</string>
    <string name="data_enterprise">企业资料</string>
    <string name="data_family_money">家庭财产信息</string>
    <string name="data_bank_record">银行流水</string>

    <!--data-item-->
    <string name="individual_id">本人身份证</string>
    <string name="consort_id">配偶身份证</string>
    <string name="household">户口本</string>
    <string name="marriage_cer">结婚证</string>
    <string name="divorce_cer">离婚证</string>

    <string name="business_license">营业执照</string>
    <string name="articles_association">公司章程</string>
    <string name="opening_permit">开户许可证</string>
    <string name="lease_contract">租赁合同</string>
    <string name="purchase_sale_contract">产品购销合同</string>
    <string name="sales_confirmation">销售证明</string>

    <string name="house_data">房本复印件</string>
    <string name="car_data">车本复印件</string>
    <string name="other_property">其他财产证明</string>

    <string name="enterprise_bank_flow">企业银行流水</string>
    <string name="person_bank_flow">个人银行流水</string>

    <string name="front_pic">正面图片</string>
    <string name="side_pic">反面图片</string>

    <string name="household_head_pic">户主页</string>
    <string name="person_pic">本人页面</string>

    <!--协议相关-->
    <string name="agreement_prefix">本人已阅读</string>
    <string name="agreement_suffix">，且已理解上述内容，并承担相关风险</string>


</resources>
