<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.virgo.financeloan.ui.view.CustomTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:visibility="gone"
        app:default_title="@string/title_login" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@mipmap/icon_launch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:minEms="3"
            android:text="@string/phone_num"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:id="@+id/login_originpw_edit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_phone_tip"
            android:inputType="phone"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:minEms="3"
            android:text="@string/pw_txt"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:id="@+id/login_pw_edit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_pw"
            android:inputType="textPassword"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_change_color"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_17" />
</LinearLayout>
