<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="16dp"
        android:text="@string/require_data"
        android:gravity="center_vertical"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/font_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/data_person"
            android:textColor="@color/color_545454"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/data_person_submit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_to_submit"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/data_enterprise"
            android:textColor="@color/color_545454"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/data_enterprise_submit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_to_submit"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/data_family_money"
            android:textColor="@color/color_545454"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/data_family_submit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_to_submit"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/data_bank_record"
            android:textColor="@color/color_545454"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/data_bank_submit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_to_submit"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />
</LinearLayout>
